--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 3rem 4rem;
+  padding: 3rem 5.5rem;
 
   h2 {
     font-size: 2.5rem;
@@ -174,6 +174,10 @@ img {
 
 .social-btn :hover {
   background-color: var(--light-grayish-blue);
+}
+
+.hide {
+  display: none;
 }
 
 .attribution {
