--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ html {
   scroll-behavior: smooth;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
 body {
   font-family: "Manrope", sans-serif;
   font-size: var(--large-font-size);
@@ -31,34 +37,35 @@ body {
   color: var(--very-dark-grayish-blue);
   width: 100vw;
   height: 100vh;
-}
-
-.container {
-  display: grid;
-  place-content: center;
-  min-height: 100vh;
-  gap: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .card {
   display: flex;
+  justify-content: center;
+  align-content: center;
   background-color: #fff;
   width: 110rem;
   height: 35rem;
   border-radius: 10px;
 }
 
-.img-drawer,
-img {
-  height: 100%;
-  border-radius: 10px 0 0 10px;
+.img-drawer {
+  width: 50%;
+  img {
+    height: 100%;
+    border-radius: 10px 0 0 10px;
+  }
 }
 
 .describer-card {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 3rem 5.5rem;
+  margin: 3rem 4rem;
 
   h2 {
     font-size: 2.5rem;
@@ -105,6 +112,7 @@ img {
   border: none;
   border-radius: 50px;
   padding: 1.5rem;
+  margin-right: 2.5rem;
   display: flex;
   align-items: center;
   cursor: pointer;
@@ -118,7 +126,7 @@ img {
 .social-btns__position {
   position: relative;
   bottom: 9rem;
-  left: 40rem;
+  left: 49.5rem;
   width: 10rem;
 }
 
@@ -186,4 +194,11 @@ img {
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+/* media queries  */
+
+/* mobile size */
+
+@media (max-width: 1105px) {
 }
