--- a/style.css
+++ b/style.css
@@ -200,5 +200,19 @@ body {
 
 /* mobile size */
 
-@media (max-width: 1105px) {
+@media (max-width: 1109px) {
+  .card {
+    flex-direction: column;
+    height: 80%;
+    width: 80%;
+  }
+
+  .img-drawer {
+    width: 100%;
+    height: 60%;
+    img {
+      width: 100%;
+      border-radius: 10px 0 0 10px;
+    }
+  }
 }
